--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-# leungchristopher.github.io
+<!DOCTYPE html>
+<html>
+<head>
+<title>Christopher Leung</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+
+<h1>Christopher Leung</h1>
+  <p>I'm a student at the University of Cambridge, studying Natural Sciences.</p>
+<h2>Previous experiences</h2>
+  
+<a href="mailto:chcl4@cam.ac.uk">Email</a>
+
+</body>
+</html>
