--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <h1>Christopher Leung</h1>
   <p>I'm a student at the University of Cambridge, studying Natural Sciences.</p>
 <h2>Previous experiences</h2>
-  
+  <p>July 2023: Weizmann Institute of Science, Rehovot, Israel</p>
+  <p>April 2023: British Astrophysics and Astronomy Olympiad training camp, and an invitation to the UK Chemistry Olympiad training camp.</p>
+  <p>August 2022: Center for Novostics, Chinese University of Hong Kong</p>
 <a href="mailto:chcl4@cam.ac.uk">Email</a>
 
 </body>
