--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
 <title>Christopher Leung</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
 <h1>Christopher Leung</h1>
   <p>I'm a student at the University of Cambridge, studying Natural Sciences.</p>
 <h2>Previous experiences</h2>
-  <p>July 2023: Weizmann Institute of Science, Rehovot, Israel</p>
-  <p>April 2023: British Astrophysics and Astronomy Olympiad training camp, and an invitation to the UK Chemistry Olympiad training camp.</p>
-  <p>August 2022: Center for Novostics, Chinese University of Hong Kong</p>
-<a href="mailto:chcl4@cam.ac.uk">Email</a>
+  <p>2023: Weizmann Institute of Science, Rehovot, Israel</p>
+  <p>2022: Center for Novostics, Chinese University of Hong Kong</p>
+<h2>Contact</h2>
+  <a href="mailto:chcl4@cam.ac.uk">Email</a>
+  <p>CV available on request.</p>
 
 </body>
 </html>
