--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
 <h1>Christopher Leung</h1>
-  <p>I'm a student at the University of Cambridge, studying Natural Sciences.</p>
+  <p>I'm a student at the University of Cambridge, reading Part IA of the Natural Sciences Tripos.</p>
+  <p>Part IA: Mathematics, Physics, Chemistry, Biology of Cells</p>
+  <p>Interested in opportunities related to: quantum mechanics and computational applications (previously involved with the Oxford Quantum Club), astrophysics (previously involved with the British Astrophysics and Astronomy Olympiad), cell-free DNA non-invasive diagnostics, and protein conformational dynamics, amongst other things</p>
 <h2>Previous experiences</h2>
   <p>2023: Weizmann Institute of Science, Rehovot, Israel</p>
   <p>2022: Center for Novostics, Chinese University of Hong Kong</p>
