--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 
 <h1>Christopher Leung</h1>
   <p>I'm a student at the University of Cambridge, reading Part IA of the Natural Sciences Tripos.</p>
-  <p>Part IA: Mathematics, Physics, Chemistry, Biology of Cells</p>
-  <p>Interested in opportunities related to: quantum mechanics and computational applications (previously involved with the Oxford Quantum Club), astrophysics (previously involved with the British Astrophysics and Astronomy Olympiad), cell-free DNA non-invasive diagnostics, and protein conformational dynamics, amongst other things</p>
+  <p>Part IA courses: Mathematics, Physics, Chemistry, Biology of Cells</p>
+  <p>I'm particularly interested in opportunities related to: 
+    <p>Quantum mechanics and computational applications (previously involved with the Oxford Quantum Club)</p>
+    <p>Astrophysics (previously involved with the British Astrophysics and Astronomy Olympiad)</p> 
 <h2>Previous experiences</h2>
-  <p>2023: Weizmann Institute of Science, Rehovot, Israel</p>
-  <p>2022: Center for Novostics, Chinese University of Hong Kong</p>
+  <p>2023: Weizmann Institute of Science, Rehovot, Israel: protein conformational dynamics</p>
+  <p>2022: Center for Novostics, Chinese University of Hong Kong, Hong Kong, China: non-invasive cell-free DNA diagnostics</p>
 <h2>Contact</h2>
   <a href="mailto:chcl4@cam.ac.uk">Email</a>
   <p>CV available on request.</p>
